# stock-forecasting-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
config/: config.yaml
dashboard/: app.py  theme.py
data/sample/: ANZ_AX_1d.parquet  BHP_AX_1d.parquet  CBA_AX_1d.parquet  CSL_AX_1d.parquet  FMG_AX_1d.parquet  NAB_AX_1d.parquet  TLS_AX_1d.parquet  WBC_AX_1d.parquet  WES_AX_1d.parquet  WOW_AX_1d.parquet
deep-analysis/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deep-analysis/.claude/: launch.json
deep-analysis/app/: client.tsx  routeTree.gen.ts  styles.css
deep-analysis/app/components/: ChecklistCard.tsx  CompareTable.tsx  DeepDivePanel.tsx  FinancialsPanel.tsx  PolymarketPanel.tsx  PriceChart.tsx  RiskCalculator.tsx  Scorecard.tsx  SentimentPanel.tsx  VerdictCard.tsx
deep-analysis/app/lib/: analytics.ts  apify.ts  claude.ts  deepdive.ts  demo.ts  fundamentals.ts  journal.ts  llm.ts  market.ts  mmd.ts  news.ts  pipeline.ts  polymarket.ts  risk.ts  scoring.ts  storage.ts  tickers.ts
deep-analysis/app/routes/: __root.tsx  analysis.$ticker.tsx  compare.tsx  dashboard.tsx  index.tsx  journal.tsx  market.tsx
docs/: DEPLOY.md
models/: metadata.json  xgb_forecaster.json
scripts/: deploy_hf_api.py  deploy_hf_space.py  make_figures.py  smoke_test.py  train.py  train_lstm.py
src/stockfc/: __init__.py  config.py  predict.py
src/stockfc/data/: __init__.py  ingest.py
src/stockfc/features/: __init__.py  technical.py
src/stockfc/models/: __init__.py  baselines.py  dataset.py  evaluate.py  lstm_model.py  registry.py  xgb_model.py
tests/: test_api.py  test_data.py  test_features.py  test_predict.py
