[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockfc"
version = "0.1.0"
description = "ASX stock-price forecasting with a full MLOps lifecycle: ingestion, feature engineering, model comparison, experiment tracking, a prediction API and a live dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sanny Un Sowadh Wamik" }]
keywords = ["mlops", "time-series", "forecasting", "xgboost", "lstm", "fastapi", "streamlit"]

dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15",
  "pyyaml>=6",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "yfinance>=0.2.40",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "joblib>=1.3",
  "requests>=2.31",
]

[project.optional-dependencies]
# Classical + boosted models, tuning and experiment tracking
models = ["statsmodels>=0.14", "optuna>=3.6", "mlflow>=2.12"]
# Deep learning (heavier; pinned to a slim Python 3.11 image in Docker)
dl = ["tensorflow>=2.16"]
# Serving
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Dashboard
app = ["streamlit>=1.33", "plotly>=5.20"]
# Local dev / CI
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.10", "types-PyYAML", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/stockfc"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]  # intentional sys.path shim before imports
"conftest.py" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection defaults are an accepted pattern.
extend-immutable-calls = ["fastapi.Query", "fastapi.Path", "fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
